/resources/scss/: fixed bug with smileys not being aligned to text

--- a/resources/scss/_pmp.smileys.scss
+++ b/resources/scss/_pmp.smileys.scss
@@ -6,6 +6,8 @@ $smiley-size:           24px;
     height: $smiley-size;
     display: inline-block;
 
+    top: 6px;
+
     background-image: $smiley-image;
     background-repeat: no-repeat;
 
